@@ -2,21 +2,20 @@
 Adding some fluff to [Java's Foreign Function and Memory API](https://openjdk.org/jeps/424) ❤
 
 ## Prerequisites
-This software requires Java 21 and Maven >= 3.3.x. However, it is best to use a current Maven version, i. e. >= 3.9.x.
+This software requires Java 22 and Maven >= 3.3.x. However, it is best to use a current Maven version, i. e. >= 3.9.x.
 
 ## Build
 Usually a `mvn clean install` should be enough.
 
 ## IDE Setup
-Due to the usage of Java 21 preview code, the following special setup is required:  
+Due to the usage of Java 22 code, the following special setup is required:  
 * Add the following to the startup JVM options of your IDE (e. g. eclipse.ini):
 
 ```
---enable-preview
 --enable-native-access=ALL-UNNAMED
 ```
 * Add the following JVM option to launch configurations in order to be able to run (tests) from within the IDE:
-```--enable-native-access=ALL-UNNAMED --enable-preview```
+```--enable-native-access=ALL-UNNAMED```
 
 ## CAUTION
 Due to the nature of unchecked memory access, it is possible to program all sort of weird things like "pointer magic", "ill-casting" data, address / read / write dangerous memory areas, etc. In most of these cases, the JVM will crash and / or the OS will prevent anything bad from happening **but this is not guaranteed**.  
